--- a/index.html
+++ b/index.html
@@ -42,7 +42,7 @@
                     <span class="button-text">Rist.</span>
                 </a>
                 
-                <a href="https://wa.me/393511938137?text=Sarò%20presenge%20alla%20comunione%20di%20[Nome] ❤️🙏🏻" target="_blank" class="circle-button whatsapp-confirm" title="Conferma Presenza">
+                <a href="https://wa.me/393511938137?text=Sarò/saremo%20presenti%20alla%20comunione%20di%20[Nome]" target="_blank" class="circle-button whatsapp-confirm" title="Conferma Presenza">
                     <span class="button-icon">✅</span>
                     <span class="button-text">conferma</span>
                 </a>
@@ -52,13 +52,19 @@
                 <div id="countdown" class="gold-text">Caricamento...</div>
             </div>
 
-            <p class="details black-text" style="margin-top: 25px;">Invito creato da:</p>
+            <p class="details black-text" style="margin-top: 40px;">Invito creato da:</p>
             <div class="buttons-container social-buttons">
+                <a href="https://www.tiktok.com/@mg_digital_invitations?_t=ZN-90gBWuIQhAk&_r=1" target="_blank" class="action-button">
+                    MG_digital_invitations: TikTok
+                </a>
                 <a href="https://www.instagram.com/_mariogyt_/" target="_blank" class="action-button">
                     Mario G.: Instagram
                 </a> 
                 <a href="https://www.youtube.com/@MariogYT." target="_blank" class="action-button">
                     Mario G.: Youtube
+                </a>
+                <a href="https://www.tiktok.com/@mariogyt_?_t=ZN-90gBc2FwNWQ&_r=1" target="_blank" class="action-button">
+                    Mario G.: YouTube
                 </a>
             </div>
             
