--- a/index.html
+++ b/index.html
@@ -64,7 +64,7 @@
                     Mario G.: Youtube
                 </a>
                 <a href="https://www.tiktok.com/@mariogyt_?_t=ZN-90gBc2FwNWQ&_r=1" target="_blank" class="action-button">
-                    Mario G.: YouTube
+                    Mario G.: TikTok
                 </a>
             </div>
             
