--- a/index.html
+++ b/index.html
@@ -23,6 +23,7 @@
             <p> ✝️​🙏​🍸​✝️​🙏​🍸​✝️​🙏🍸​​✝️​🙏​🍸​</p>
             <h1 class="main-title cursive-name black-text">Nome</h1>
             <p> ✝️​🙏​🍸​✝️​🙏​🍸​✝️​🙏🍸​​✝️​🙏​🍸​</p>
+            <img src="primacomunioneMBF.jpg" alt="Foto del festeggiato" class="event-photo">
             <p class="details black-text date-time">Il giorno: 28 / 06 / 2026 alle ore 11:00</p>
             
             <div class="separator"></div>
