--- a/index.html
+++ b/index.html
@@ -27,7 +27,7 @@
 
             <h1 class="cursive-name black-text">Nome</h1>
             
-            <img src="comunioneMBF1.jpg" alt="Foto del festeggiato" class="event-photo">
+            <img src="primacomunioneMBF.jpg" alt="Foto del festeggiato" class="event-photo">
 
             <p class="rose-border bottom-border"> ✝️​🙏​🍸​✝️​🙏​🍸​✝️​🙏🍸​​✝️​🙏​🍸​</p>
 
